--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
   src: url("Roboto/Roboto-Light.ttf");
 }
 
+/*
+Commencement de SCSS pour le style mobil.
+*/
 body {
   margin: 0em;
   margin-right: 0em;
@@ -27,8 +30,7 @@ header {
 }
 
 header .LogoCentral {
-  margin-top: 4em;
-  margin-bottom: 2em;
+  margin-top: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -39,7 +41,7 @@ header .LogoCentral {
 }
 
 header .LogoCentral .LogoCentral__image {
-  width: 50%;
+  width: 70%;
 }
 
 .localisation {
@@ -54,17 +56,17 @@ header .LogoCentral .LogoCentral__image {
       -ms-flex-pack: center;
           justify-content: center;
   background-color: #eaeaea;
+  margin-bottom: 2em;
 }
 
 .localisation__iconLocalisation {
-  font-size: 3em;
+  font-size: 2em;
 }
 
 .localisation__textLocalisation {
   margin-left: 1.5em;
-  font-size: 2.6em;
+  font-size: 1.7em;
   white-space: nowrap;
-  padding-right: 13%;
 }
 
 .AnnonceSlogan {
@@ -86,7 +88,7 @@ header .LogoCentral .LogoCentral__image {
   margin-top: 0em;
   font-family: "RobotoBold";
   margin-top: 2em;
-  font-size: 4em;
+  font-size: 2em;
   margin-left: 10%;
   margin-right: 10%;
   text-align: center;
@@ -103,21 +105,22 @@ header .LogoCentral .LogoCentral__image {
   background: linear-gradient(#FF79DA, #9356DC);
   width: 70%;
   border-radius: 90px;
-  margin-top: 3em;
-  margin-bottom: 5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .AnnonceSlogan__btnExplorerNosRestaurants p {
-  font-size: 3em;
+  font-size: 1.4em;
   text-align: center;
   color: white;
   font-family: "Roboto";
 }
 
 .TitreFonctionnement {
-  font-size: 4em;
+  font-size: 2.2em;
   font-family: "RobotoBold";
-  margin-left: 10%;
+  margin-left: 5%;
+  margin-top: 4em;
   margin-bottom: 2em;
 }
 
@@ -125,7 +128,7 @@ header .LogoCentral .LogoCentral__image {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 3.3em;
+  font-size: 1.4em;
   font-family: "RobotoBold";
   -ms-flex-pack: distribute;
       justify-content: space-around;
@@ -169,7 +172,7 @@ header .LogoCentral .LogoCentral__image {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 3.3em;
+  font-size: 1.4em;
   font-family: "RobotoBold";
   -ms-flex-pack: distribute;
       justify-content: space-around;
@@ -213,7 +216,7 @@ header .LogoCentral .LogoCentral__image {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 3.3em;
+  font-size: 1.4em;
   font-family: "RobotoBold";
   -ms-flex-pack: distribute;
       justify-content: space-around;
@@ -256,14 +259,14 @@ header .LogoCentral .LogoCentral__image {
 
 .Restaurants {
   background-color: #f6f6f6;
-  padding-top: 5em;
+  padding-top: 2em;
 }
 
 .Restaurants__titre {
   font-family: "RobotoBold";
-  font-size: 5em;
-  margin-left: 10%;
-  margin-bottom: 1em;
+  font-size: 2em;
+  margin-left: 5%;
+  margin-bottom: 0em;
 }
 
 .Restaurants a {
@@ -281,12 +284,11 @@ header .LogoCentral .LogoCentral__image {
   background-color: white;
   -webkit-box-shadow: 0px 5px 10px #C2C2C2;
           box-shadow: 0px 5px 10px #C2C2C2;
-  height: 50em;
+  height: AUTO;
 }
 
 .Restaurants__vignette__image {
   overflow: hidden;
-  height: 70%;
   position: relative;
 }
 
@@ -301,7 +303,7 @@ header .LogoCentral .LogoCentral__image {
   top: 5%;
   background-color: #9ee3d0;
   font-family: "Roboto";
-  font-size: 2.4em;
+  font-size: 1.4em;
   border-radius: 14px;
 }
 
@@ -324,21 +326,21 @@ header .LogoCentral .LogoCentral__image {
 }
 
 .Restaurants__vignette__description__text__Nom {
-  font-size: 4em;
+  font-size: 1.5em;
   font-family: "RobotoBold";
   margin-bottom: 0em;
 }
 
 .Restaurants__vignette__description__text__Adresse {
   font-family: "RobotoLight";
-  font-size: 3.3em;
+  font-size: 1.3em;
   margin-top: 0em;
 }
 
 .Restaurants__vignette__description__logo {
   color: black;
   position: relative;
-  font-size: 6em;
+  font-size: 2.5em;
   margin-right: 5%;
 }
 
@@ -379,17 +381,17 @@ footer {
   margin-top: 2em;
   width: 100%;
   padding-bottom: 10%;
+  overflow: hidden;
 }
 
 footer .ImageFooter {
   margin-top: 2em;
   margin-left: 5%;
-  height: 4em;
 }
 
 footer .ImageFooter img {
   color: white;
-  height: 100%;
+  width: 90%;
 }
 
 footer .Proposer, footer .Partenaire, footer .Mention, footer .Contact {
@@ -397,7 +399,7 @@ footer .Proposer, footer .Partenaire, footer .Mention, footer .Contact {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 2.3em;
+  font-size: 1.2em;
   font-family: "Roboto";
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -411,5 +413,336 @@ footer .Proposer i, footer .Partenaire i, footer .Mention i, footer .Contact i {
 
 footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
   margin-bottom: 0em;
+}
+
+@media screen and (min-width: 900px) {
+  .localisation {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-radius: 34px;
+    margin-top: 2em;
+  }
+  .localisation__iconLocalisation {
+    font-size: 2em;
+  }
+  .localisation__textLocalisation {
+    margin-left: 1.5em;
+    font-size: 2em;
+    white-space: nowrap;
+    padding-right: 13%;
+  }
+  .AnnonceSlogan {
+    background-color: #f6f6f6;
+    margin-top: 0em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .AnnonceSlogan__Slogan {
+    margin-top: 0em;
+    margin-top: 2em;
+    font-size: 2em;
+    margin-left: 5%;
+    margin-right: 5%;
+    text-align: right;
+  }
+  .AnnonceSlogan__sousTitre {
+    font-size: 1.3em;
+    text-align: left;
+    margin-right: 1em;
+  }
+  .AnnonceSlogan__btnExplorerNosRestaurants {
+    border-radius: 1em;
+    margin-right: 1em;
+  }
+  .AnnonceSlogan__btnExplorerNosRestaurants p {
+    font-size: 3em;
+    text-align: center;
+  }
+  .TitreFonctionnement {
+    font-size: 3em;
+    text-align: center;
+  }
+  .vignettesFonctionnement {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .vignettesFonctionnement__ChoixRestaurant {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: 2.3em;
+    font-family: "RobotoBold";
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: #f6f6f6;
+    position: relative;
+    margin-right: 5%;
+    margin-left: 1em;
+    border-radius: 60px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    -webkit-box-shadow: 0px 2px 20px #c2c2c2;
+            box-shadow: 0px 2px 20px #c2c2c2;
+    margin-bottom: 2em;
+  }
+  .vignettesFonctionnement__ChoixRestaurant p {
+    text-align: center;
+  }
+  .vignettesFonctionnement__ChoixRestaurant__pastille {
+    position: absolute;
+    left: 40%;
+    bottom: -10%;
+    background-color: #9356dc;
+    border-radius: 100px;
+  }
+  .vignettesFonctionnement__ChoixRestaurant__pastille p {
+    color: white;
+    margin: 0.2em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+  }
+  .vignettesFonctionnement__ChoixRestaurant__logo {
+    margin-left: 5%;
+    font-size: 2.3em;
+    color: gray;
+  }
+  .vignettesFonctionnement__CompositionMenu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: 2.3em;
+    font-family: "RobotoBold";
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: #f6f6f6;
+    position: relative;
+    margin-right: 5%;
+    margin-left: 1em;
+    border-radius: 60px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    -webkit-box-shadow: 0px 2px 20px #c2c2c2;
+            box-shadow: 0px 2px 20px #c2c2c2;
+    margin-bottom: 2em;
+  }
+  .vignettesFonctionnement__CompositionMenu p {
+    text-align: center;
+  }
+  .vignettesFonctionnement__CompositionMenu__pastille {
+    position: absolute;
+    left: 40%;
+    bottom: -10%;
+    background-color: #9356dc;
+    border-radius: 100px;
+  }
+  .vignettesFonctionnement__CompositionMenu__pastille p {
+    color: white;
+    margin: 0.2em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+  }
+  .vignettesFonctionnement__CompositionMenu__logo {
+    margin-left: 5%;
+    font-size: 2.3em;
+    color: gray;
+  }
+  .vignettesFonctionnement__Degustez {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: 2.3em;
+    font-family: "RobotoBold";
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: #f6f6f6;
+    position: relative;
+    margin-right: 5%;
+    margin-left: 1em;
+    border-radius: 60px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    -webkit-box-shadow: 0px 2px 20px #c2c2c2;
+            box-shadow: 0px 2px 20px #c2c2c2;
+    margin-bottom: 2em;
+    background-color: #f5ecfe;
+  }
+  .vignettesFonctionnement__Degustez p {
+    text-align: center;
+  }
+  .vignettesFonctionnement__Degustez__pastille {
+    position: absolute;
+    left: 40%;
+    bottom: -10%;
+    background-color: #9356dc;
+    border-radius: 100px;
+  }
+  .vignettesFonctionnement__Degustez__pastille p {
+    color: white;
+    margin: 0.2em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+  }
+  .vignettesFonctionnement__Degustez__logo {
+    margin-left: 5%;
+    font-size: 2.3em;
+    color: gray;
+  }
+  .Restaurants {
+    padding-top: 2em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .Restaurants__titre {
+    font-size: 3em;
+    text-align: center;
+  }
+  .Restaurants a {
+    color: black;
+    text-decoration: none;
+  }
+  .Restaurants__vignette {
+    margin-bottom: 3em;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    border-radius: 0px;
+    background-color: white;
+    -webkit-box-shadow: 0px 5px 10px #C2C2C2;
+            box-shadow: 0px 5px 10px #C2C2C2;
+    height: 100em;
+  }
+  .Restaurants__vignette__image {
+    overflow: hidden;
+    height: 70%;
+    position: relative;
+  }
+  .Restaurants__vignette__image img {
+    position: absolute;
+    left: -90%;
+    height: 100%;
+    width: auto;
+  }
+  .Restaurants__vignette__image__Nouveau {
+    z-index: 3;
+    position: absolute;
+    right: 20%;
+    top: 2%;
+    background-color: #9ee3d0;
+    font-family: "Roboto";
+    font-size: 2.4em;
+    border-radius: 14px;
+  }
+  .Restaurants__vignette__image__Nouveau p {
+    opacity: 0.5;
+    margin: 0.5em;
+  }
+  .Restaurants__vignette__description {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: 4%;
+  }
+  .Restaurants__vignette__description__text__Nom {
+    font-size: 3em;
+    font-family: "RobotoBold";
+    margin-bottom: 0em;
+    text-align: center;
+    height: 3em;
+  }
+  .Restaurants__vignette__description__text__Adresse {
+    font-family: "RobotoLight";
+    font-size: 2.3em;
+    margin-top: 0em;
+    text-align: center;
+  }
+  .Restaurants__vignette__description__logo {
+    margin-left: 30%;
+    margin-top: 30%;
+    color: black;
+    position: relative;
+    font-size: 4em;
+  }
+  .Restaurants__vignette__description__logo i {
+    position: absolute;
+  }
+  .Restaurants__vignette__description__logo .fas {
+    z-index: 1;
+    color: #FF79DA;
+  }
+  .Restaurants__vignette__description__logo .far {
+    z-index: 3;
+  }
+  .Restaurants__vignette__description__logo__ecran {
+    z-index: 2;
+    position: absolute;
+    background-color: white;
+    width: 1em;
+    height: 0.75em;
+    right: 0em;
+    bottom: -0.34em;
+    -webkit-transition: bottom 400ms;
+    transition: bottom 400ms;
+  }
+  .Restaurants__vignette__description__logo:hover .Restaurants__vignette__description__logo__ecran {
+    bottom: 0.5em;
+  }
+  footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  footer .ImageFooter {
+    width: 20%;
+  }
+  footer .ImageFooter img {
+    width: 100%;
+    height: auto;
+  }
+  footer .Contact {
+    margin-right: 1em;
+  }
 }
 /*# sourceMappingURL=style.css.map */
