--- a/style.css
+++ b/style.css
@@ -13,12 +13,160 @@
   src: url("Roboto/Roboto-Light.ttf");
 }
 
+@-webkit-keyframes AnimLoading {
+  0% {
+  }
+  10% {
+  }
+  99% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes AnimLoading {
+  0% {
+  }
+  10% {
+  }
+  99% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes animBoule {
+  0% {
+  }
+  50% {
+    background-color: white;
+    -webkit-transform: translateY(-2em);
+            transform: translateY(-2em);
+  }
+  100% {
+    -webkit-transform: translateY(0em);
+            transform: translateY(0em);
+  }
+}
+
+@keyframes animBoule {
+  0% {
+  }
+  50% {
+    background-color: white;
+    -webkit-transform: translateY(-2em);
+            transform: translateY(-2em);
+  }
+  100% {
+    -webkit-transform: translateY(0em);
+            transform: translateY(0em);
+  }
+}
+
+@-webkit-keyframes displayLoading {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes displayLoading {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 /*
 Commencement de SCSS pour le style mobil.
 */
 body {
+  position: relative;
   margin: 0em;
   margin-right: 0em;
+}
+
+.AnimationLoadingPage {
+  position: absolute;
+  top: 5%;
+  width: 100%;
+  margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  opacity: 0;
+  -webkit-animation: displayLoading 3s 5ms;
+          animation: displayLoading 3s 5ms;
+}
+
+.AnimationLoadingPage__image {
+  overflow: hidden;
+  width: 100%;
+}
+
+.AnimationLoadingPage__image img {
+  width: 100%;
+}
+
+.AnimationLoadingPage__boules {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 2em;
+}
+
+.AnimationLoadingPage__boules__boule1 {
+  margin: 1em;
+  height: 3em;
+  width: 3em;
+  background-color: #9356dc;
+  -webkit-animation: animBoule 2s infinite;
+          animation: animBoule 2s infinite;
+}
+
+.AnimationLoadingPage__boules__boule2 {
+  margin: 1em;
+  height: 3em;
+  width: 3em;
+  background-color: #ff79da;
+  -webkit-animation: animBoule 2s 300ms infinite;
+          animation: animBoule 2s 300ms infinite;
+}
+
+.AnimationLoadingPage__boules__boule3 {
+  margin: 1em;
+  height: 3em;
+  width: 3em;
+  background-color: #99e2d0;
+  -webkit-animation: animBoule 2s 600ms infinite;
+          animation: animBoule 2s 600ms infinite;
+}
+
+.Corps {
+  opacity: 0.2;
+  -webkit-animation: AnimLoading 3s both ease-out;
+          animation: AnimLoading 3s both ease-out;
 }
 
 header {
@@ -56,7 +204,6 @@ header .LogoCentral .LogoCentral__image {
       -ms-flex-pack: center;
           justify-content: center;
   background-color: #eaeaea;
-  margin-bottom: 2em;
 }
 
 .localisation__iconLocalisation {
@@ -267,6 +414,7 @@ header .LogoCentral .LogoCentral__image {
   font-size: 2em;
   margin-left: 5%;
   margin-bottom: 0em;
+  background-color: #f6f6f6;
 }
 
 .Restaurants a {
@@ -415,7 +563,7 @@ footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
   margin-bottom: 0em;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 800px) {
   .localisation {
     margin-left: auto;
     margin-right: auto;
